--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,10 @@ body {
   font-family: var(--font-arial);
 }
 
+body.noscroll {
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
 }
